Removed grey background for "No comments"

--- a/mhnweb/templates/generic/includes/comment.html
+++ b/mhnweb/templates/generic/includes/comment.html
@@ -72,7 +72,7 @@
     </li>
     {% endfor %}
     {% if no_comments %}
-    <li>{% trans "There are currently no comments" %}</li>
+    {% trans "There are currently no comments" %}
     {% endif %}
 </ul>
 
