New Logo, footer and menu

--- a/mhnweb/templates/pages/menus/footer.html
+++ b/mhnweb/templates/pages/menus/footer.html
@@ -1,7 +1,7 @@
 {% load i18n future pages_tags %}
 
 {% spaceless %}
-<div class="span10 foots" style="margin-left:0px;">
-Copyright © {% now "Y" %}, MHN Ltd. All rights reserved
+<div class="span10 foots">
+<h6>Copyright © {% now "Y" %}, MHN Ltd. All rights reserved</h6>
 </div>
 {% endspaceless %}
