--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -105,11 +105,13 @@
 </div>
 </div>
 
+{% editable %}
 <div class="prefooter">
 <div class="container">
 {% page_menu "pages/menus/prefooter.html" %}
 </div>
 </div>
+{% endeditable %}
 
 <footer>
 <div class="container">
