--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -161,6 +161,13 @@ a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
   margin-top: 15px;
   margin-left: 20px;
 }
+.foot_margin {
+  margin-left: 0px!important;
+}
+.prefoot_text {
+  margin-top:-20px;
+  margin-left:-15px!important;
+}
 .foots {
   text-align: right;
 }
