--- a/mhnweb/static/css/bootstrap.css
+++ b/mhnweb/static/css/bootstrap.css
@@ -4652,7 +4652,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  color: #555555;
+  color: #f08421;
   text-decoration: none;
   /*
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
