--- a/mhnweb/templates/errors/404.html
+++ b/mhnweb/templates/errors/404.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% block indexpage %}
+<div class="span10">
+	<img src="{{ MEDIA_URL }}uploads/broken_leaf.png" alt="404" />
 
 {% block title %}
-{% trans "Page not found" %}
+<h1><b>{% trans "Error 404 – Not Found" %}</b></h1>
 {% endblock %}
 
 {% block main %}
-{% trans "The page you requested does not exist." %}
+{% trans "Sorry, but what you’re looking for isn’t here. Perhaps you typed a URL incorrectly or clicked on a broken hyperlink." %}
+{% endblock %}
+</div>
 {% endblock %}
