--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -8,6 +8,9 @@
   -moz-border-radius-topleft: 10px;
   border-top-left-radius: 10px;
 }
+.nomargin {
+  margin-left: 0px!important;
+}
 /* General elements */
 h3 {margin:10px 0;}
 h5 {line-height:140%; margin:20px 0 10px 0;}
