--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -55,7 +55,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu {display:block;}
 footer {/*background:rgba(220,220,220, 0.1);*/ padding:10px 0; text-align:center; /*margin-top:40px;*/}
 footer .container {text-align:left; display:inline-block; width:auto;}
 footer li {float:left; list-style-type:none;}
-footer li li {float:none; clear:both; width:120px; padding:10px 0; margin-right:30px;}
+footer li li {float:none; clear:both; width:120px; padding:0px 0; margin-right:30px;}
 footer p {margin-top:40px; text-align:center; font-size:12px;}
 footer .separator {opacity:0.3; margin:0 10px;}
 @media (max-width: 979px) {footer .separator {display:block; visibility:hidden; width:1px; height:1px;}}
@@ -165,6 +165,9 @@ a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
   margin-left: 20px;
 }
 .foot_margin {
+  margin-left: 0px!important;
+}
+.no_margin {
   margin-left: 0px!important;
 }
 .prefoot_text {
@@ -394,3 +397,6 @@ ol.bjqs-markers li {
 .active-marker a { color:#DEBB1E; }
 p.bjqs-caption{display:block;width:96%;margin:0;padding:2%;position:absolute;bottom:0;}
 
+#dropdown-menu-terms {
+  display: none;
+}
