footer links disadle on main menu

--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -397,6 +397,9 @@ ol.bjqs-markers li {
 .active-marker a { color:#DEBB1E; }
 p.bjqs-caption{display:block;width:96%;margin:0;padding:2%;position:absolute;bottom:0;}
 
+#dropdown-menu-privacy-policy {
+  display: none;
+}
 #dropdown-menu-terms {
   display: none;
 }
