terms and conditions removed from main menu

--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -400,6 +400,6 @@ p.bjqs-caption{display:block;width:96%;margin:0;padding:2%;position:absolute;bot
 #dropdown-menu-privacy-policy {
   display: none;
 }
-#dropdown-menu-terms {
+#dropdown-menu-terms-conditions {
   display: none;
 }
