--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -55,7 +55,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu {display:block;}
 footer {/*background:rgba(220,220,220, 0.1);*/ padding:10px 0; text-align:center; /*margin-top:40px;*/}
 footer .container {text-align:left; display:inline-block; width:auto;}
 footer li {float:left; list-style-type:none;}
-footer li li {float:none; clear:both; width:120px; padding:0px 0; margin-right:30px;}
+footer li li {float:none; clear:both; /* width:120px; */ padding:0px 0; margin-right:30px;}
 footer p {margin-top:40px; text-align:center; font-size:12px;}
 footer .separator {opacity:0.3; margin:0 10px;}
 @media (max-width: 979px) {footer .separator {display:block; visibility:hidden; width:1px; height:1px;}}
