--- a/mhnweb/templates/pages/menus/footer.html
+++ b/mhnweb/templates/pages/menus/footer.html
@@ -1,7 +1,7 @@
 {% load i18n future pages_tags %}
 
 {% spaceless %}
-<div class="span6 no_margin">
+<div class="span3 no_margin">
 {% if page_branch_in_menu %}
 
 {% for page in page_branch %}
@@ -44,7 +44,8 @@
 
 {% endif %}
 </div>
-<div class="span4 foots">
+<div class="span7 foots">
+Company Registered in Scotland: no.SC304505 | 6 ATHOLL CRESCENT PERTH PH1 5JN
 <h6>Copyright © {% now "Y" %}, MHN Ltd. All rights reserved</h6>
 </div>
 {% endspaceless %}
