--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -56,67 +56,59 @@
 
 {% block indexpage %}
 <div class="mainborder">
-<div class="container">
-
-{% nevercache %}
-{% for message in messages %}
-<div class="alert alert-{{ message.tags }}" data-alert="alert">
-    <a class="close" href="#" onclick="$(this).parent().fadeOut('fast'); return false;">×</a>{{ message }}
-</div>
-{% endfor %}
-{% endnevercache %}
-
-
-<div class="main_logo span4">
-    <a href="{% url "home" %}">
-        <img src="{{ MEDIA_URL }}uploads/mhn_logo.png">
-    </a>
-</div>
-
-
-<div class="span6 menu_smth">
-<div class="navbar">{% page_menu "pages/menus/menu.html" %}</div>
-
-</div>
-
-</div>
 
 <div class="container">
-<div class="row">
 
-{% block feed_panel %}
-<img src="{{ MEDIA_URL }}uploads/blog_banner.jpg" class="bloggy" alt="MHN Blog" />
-<div class="span7 middle">
-    {% block main %}{% endblock %}
-</div>
-<div class="span3 right">
     {% nevercache %}
-    {% include "includes/user_panel.html" %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}" data-alert="alert">
+        <a class="close" href="#" onclick="$(this).parent().fadeOut('fast'); return false;">×</a>{{ message }}
+    </div>
+    {% endfor %}
     {% endnevercache %}
-    <div class="panel">
-    {% block right_panel %}
-    {% ifinstalled mezzanine.twitter %}
-    {% include "twitter/tweets.html" %}
-    {% endifinstalled %}
-    {% endblock %}
+
+    <div class="main_logo span4">
+        <a href="{% url "home" %}">
+        <img src="{{ MEDIA_URL }}uploads/mhn_logo.png">
+        </a>
     </div>
-</div>
-{% endblock %}
+
+    <div class="span6 menu_smth">
+        <div class="navbar">{% page_menu "pages/menus/menu.html" %}</div>
+    </div>
 
 </div>
-</div>
-</div>
 
-<div class="prefooter">
-    <div class="container">
-        {% page_menu "pages/menus/prefooter.html" %}
+<div class="container">
+    <div class="row">
+
+        {% block feed_panel %}
+        <img src="{{ MEDIA_URL }}uploads/blog_banner.jpg" class="bloggy" alt="MHN Blog" />
+            <div class="span7 middle">
+                {% block main %}{% endblock %}
+            </div>
+            <div class="span3 right">
+                {% nevercache %}
+                {% include "includes/user_panel.html" %}
+                {% endnevercache %}
+            <div class="panel">
+                {% block right_panel %}
+                {% ifinstalled mezzanine.twitter %}
+                {% include "twitter/tweets.html" %}
+                {% endifinstalled %}
+                {% endblock %}
+            </div>
+            </div>
+        {% endblock %}
     </div>
 </div>
+
+</div><!-- end mainborder -->
 
 <footer>
-<div class="container">
-{% page_menu "pages/menus/footer.html" %}
-</div>
+    <div class="container">
+        {% page_menu "pages/menus/footer.html" %}
+    </div>
 </footer>
 
 {% include "includes/footer_scripts.html" %}
