--- a/mhnweb/templates/pages/menus/footer.html
+++ b/mhnweb/templates/pages/menus/footer.html
@@ -1,7 +1,23 @@
 {% load i18n future pages_tags %}
 
+<div class="prefooter">
+    <div class="container">
+        <div class="span10 foot_margin">
+            <div class="span4 prefoot_text">
+                <h5>Our main focus, is an emphasis on providing complete solutions to both technical and business problems.<br>
+                <a href="{% url "about-us" %}"><img src="{{ MEDIA_URL }}uploads/learn_more.png" alt="Learn more" /></a>
+                </h5>
+            </div>
+            <div class="foots">
+                <a target="_blank" href="https://www.facebook.com/pages/Mobile-Healthcare-Networks/234761683242826"><img src="{{ MEDIA_URL }}uploads/share_btn/facebook.png" class="img_a prefoot_img" alt="Facebook" /></a>
+                <a href="{% url "blog" %}"><img src="{{ MEDIA_URL }}uploads/share_btn/rss.png" class="img_a prefoot_img" alt="RSS" /></a>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% spaceless %}
-<div class="span3 no_margin">
+<div class="span3">
 {% if page_branch_in_menu %}
 
 {% for page in page_branch %}
