--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -179,6 +179,8 @@ a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
 }
 .foots {
   text-align: right;
+  float: right;
+  margin-right: 30px!important;
 }
 .bloggy {
   margin:5px 0px 5px 30px;
