--- a/mhnweb/templates/includes/form_fields.html
+++ b/mhnweb/templates/includes/form_fields.html
@@ -23,13 +23,13 @@
     <div class="controls">
         {{ field }}
         {% if field.errors %}
-        <span class="help-inline">
+        <span class="tooltip help-inline">
             {% for e in field.errors %}
             {% if not forloop.first %} / {% endif %}{{ e }}
             {% endfor %}
         </span>
         {% else %}
-        <span class="help-inline">{{ field.help_text }}</span>
+        <span class="tooltip help-inline">{{ field.help_text }}</span>
         {% endif %}
     </div>
 </div>
