iPad landscape (blog)

--- a/mhnweb/static/css/bootstrap-responsive.css
+++ b/mhnweb/static/css/bootstrap-responsive.css
@@ -499,7 +499,7 @@
     width: 476px;
   }
   .span7 {
-    width: 414px;
+    width: 674px /*414px*/;
   }
   .span6 {
     width: 600px /*352px*/;
