CSS files part2

--- a/mhnweb/static/mezzanine/css/admin/form.css
+++ b/mhnweb/static/mezzanine/css/admin/form.css
@@ -1,1 +1,1 @@
-/Library/Python/2.7/site-packages/mezzanine/forms/static/mezzanine/css/admin/form.css
+.dynamic-inline .vTextField {width:100px !important;}
