--- a/mhnweb/static/mezzanine/css/admin/gallery.css
+++ b/mhnweb/static/mezzanine/css/admin/gallery.css
@@ -1,1 +1,1 @@
-/Library/Python/2.7/site-packages/mezzanine/galleries/static/mezzanine/css/admin/gallery.css
+.dynamic-inline .vTextField {width:700px !important;}
